# Atom

./: IMPLEMENTATION_GUIDE.md  README.md  meson.build  meson_options.txt
examples/: meson.build  multi_model_inference.cpp  realtime_video_processing.cpp
include/atom/core/: config.hpp  model_factory.hpp  model_interface.hpp  model_manager.hpp  model_wrapper.hpp  tensor.hpp  types.hpp
include/atom/data/: pipeline.hpp  preprocessor.hpp  queue.hpp
include/atom/inference/: backend.hpp  backend_factory.hpp  cpu_backend.hpp  onnx_backend.hpp  tensorrt_backend.hpp
include/atom/logging/: logger.hpp  metrics.hpp
include/atom/scheduler/: dependency_graph.hpp  scheduler.hpp  task.hpp  thread_pool.hpp
include/atom/viz/: dashboard.hpp  profiler.hpp
models/: meson.build
models/classification/resnet/: meson.build  resnet50.cpp  resnet50.hpp
models/detection/yolo/: meson.build  yolov8.cpp  yolov8.hpp
src/: model_wrapper.cpp
src/core/: config.cpp  model_factory.cpp  model_manager.cpp  tensor.cpp
src/data/: pipeline.cpp  preprocessor.cpp
src/inference/: backend.cpp  backend_factory.cpp  cpu_backend.cpp  onnx_backend.cpp  tensorrt_backend.cpp
src/logging/: logger.cpp  metrics.cpp
src/scheduler/: dependency_graph.cpp  scheduler.cpp  task.cpp  thread_pool.cpp
src/viz/: dashboard.cpp  profiler.cpp
